--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,11 +49,6 @@ jobs:
     needs:
       - build_backend
       - build_frontend
-    if:
-      contains('
-        refs/heads/main
-        refs/heads/master
-      ', github.ref)
     steps:
       - name: executing remote ssh commands to deploy1
         uses: appleboy/ssh-action@master
@@ -61,6 +56,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd infra
             echo ${{ secrets.DOCKER_PASSWORD }} | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
