--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.8.5
 
-WORKDIR /code
+WORKDIR /app
 
-COPY requirements.txt .
+COPY . .
 
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt --no-cache-dir
 
 COPY . .
 
