--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ./.env
   web:
     image: vasilevas12609/foodgram_backend:latest
+#    build: ../backend
     restart: always
     volumes:
       - static_value:/app/static/
