--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     env_file:
       - ./.env
   web:
-#    image: vasilevas12609/foodgram_backend:latest
-    build: ../backend
+    image: vasilevas12609/foodgram_backend:latest
+#    build: ../backend
     restart: always
     volumes:
       - static_value:/app/static/
