--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
-    server_name 51.250.66.24;
+    server_name 51.250.66.24 http://vasilevdev.ddns.net/;
     server_tokens off;
+    client_max_body_size 20;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -41,5 +42,11 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+}
 
+server {
+    listen 443 default_server ssl;
+    server_name 51.250.66.24 http://vasilevdev.ddns.net/;
+    server_tokens off;
+    client_max_body_size 20;
 }
