--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 51.250.66.24 http://vasilevdev.ddns.net/;
+    server_name 51.250.66.24 vasilevdev.ddns.net;
     server_tokens off;
     client_max_body_size 20;
 
@@ -46,7 +46,7 @@ server {
 
 server {
     listen 443 default_server ssl;
-    server_name 51.250.66.24 http://vasilevdev.ddns.net/;
+    server_name 51.250.66.24 vasilevdev.ddns.net;
     server_tokens off;
     client_max_body_size 20;
 }
