--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -45,7 +45,7 @@ server {
 }
 
 server {
-    listen 443 default_server ssl;
+    listen 443;
     server_name 51.250.66.24 vasilevdev.ddns.net;
     server_tokens off;
     client_max_body_size 20;
