--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name 51.250.66.24 vasilevdev.ddns.net;
     server_tokens off;
-    client_max_body_size 20;
+    client_max_body_size 100M;
 
     location /api/docs/ {
         root /usr/share/nginx/html;
@@ -48,5 +48,5 @@ server {
     listen 443;
     server_name 51.250.66.24 vasilevdev.ddns.net;
     server_tokens off;
-    client_max_body_size 20;
+    client_max_body_size 100M;
 }
